--- a/Dockerfile.multistage
+++ b/Dockerfile.multistage
@@ -5,15 +5,13 @@ FROM golang:1.16-buster AS build
 
 WORKDIR /app
 
-COPY go.mod ./
-COPY go.sum ./
+RUN go get github.com/beardedandnotmuch/gpt-tg-bot/cmd/banm-gpt-tg-bot
 
 RUN go mod download
 
-COPY *.go ./
-COPY models/* ./models/
+COPY .env ./
 
-RUN go build -o /banm-gpt-tg-bot
+RUN go build github.com/beardedandnotmuch/gpt-tg-bot/cmd/banm-gpt-tg-bot
 
 ## Deploy
 FROM gcr.io/distroless/base-debian10
