implements redis for caching gpt responses

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ GPT_API_TOKEN=
 TG_API_URL=https://api.telegram.org/bot
 GPT_API_URL=https://api.openai.com/v1/completions
 PORT=3000
+REDIS_PORT=6369
+REDIS_PASSWORD=default_password
